# apollo-contrib

./: .gitignore  README.md
baidu/: Makefile  README.md  build.sh  license.txt
baidu/docs/: Baidu_CAN_APIs.txt
baidu/drivers/baidu/basa/: Makefile  basa_driver.c  basa_i2c.c  basa_intr.c  basa_reg.c  basa_sysfs.c  basa_video.c  basa_video.h
baidu/include/: README.txt
baidu/include/baidu/: adv_trigger.h  adv_trigger_ctl.h  bcan.h
baidu/include/linux/: bcan_defs.h
baidu/lib/: README.txt
baidu/linux/drivers/: README.txt
baidu/linux/drivers/linux-4.4.32/: basa.ko
baidu/linux/include/: README.txt
baidu/linux/include/uapi/linux/: zynq_api.h
baidu/src/kernel/drivers/baidu/basa/: Makefile  basa.h  basa_cam_hci.c  basa_can.c  basa_can.h  basa_chan.c  basa_chan.h  basa_driver.c  basa_fwupdate.c  basa_gps.c  basa_intr.c  basa_main.c  basa_reg.c  basa_regs.h  basa_sysfs.c  basa_trigger.c  basa_video.c  basa_video.h
baidu/src/kernel/include/uapi/linux/: zynq_api.h
baidu/src/lib/adv_trigger/: Makefile  adv_trigger_ctl.c
baidu/src/lib/bcan/: Makefile  bcan_lib.c
baidu/src/lib/common/: Makefile  adv_plat_common.c  adv_plat_common.h
baidu/src/lib/sensor_sync/: Makefile  data_type.h  input.h  pcap_input.cpp  pcap_input.h  rate.cpp  rate.h  sensor_config.cpp  sensor_config.h  sensor_proc.cpp  sensor_proc.h  sensor_sync.conf  sensor_sync.h  socket_input.cpp  socket_input.h  version.cpp  version.h
baidu/src/lib/sensor_sync/3rd/lib/: libpcap.so.0.8  libpcap.so.1.5.3
baidu/src/linux/drivers/baidu/basa/: basa_cam_hci.c  basa_cam_hci.h  basa_chan.c  basa_debug.h  basa_gps.c  basa_main.c
baidu/src/tools/adv_trigger/: Makefile  adv_trigger.c
baidu/src/tools/bcan/: Makefile  can_app.c  radar_can_app.c
baidu/src/tools/gps/: Makefile  README  baidu_gps_time  baidu_gps_time.c  init_fpga_time.sh
baidu/src/tools/sensor_sync/: Makefile  sensor_sync.cpp  sync_monitor.sh
esd/: CHANGELOG  Makefile  README  config.mk  license.txt  readme-Apollo.md
esd/bin32/: cantest  updpcie402
esd/bin64/: cantest  updpcie402
esd/example/: cantest.c
esd/include/: ntcan.h
esd/lib32/: libntcan.so.4.0.1
esd/lib64/: libntcan.so.4.0.1
esd/src/: Makefile  board.h  board.o_shipped  boardrc.h  boardrc.o_shipped  canio.h  cm.h  crc32.o_shipped  dkms.conf  esdacc.o_shipped  esdaccrc.h  esdcan.c  esdcan.h  esdcan_common.c  esdcan_pci.c  flashtail.h  nucleus.h  nucleus.o_shipped  osif.c  osif.h  osif_spi.h  osifi.h  osiftypes.h  sys_osiftypes.h  sysdep.h
obu/: CMakeLists.txt  README.md  build.sh  main.cc  v2x_gflags.cc  v2x_gflags.h
obu/app/: CMakeLists.txt
obu/app/database/: CMakeLists.txt  v2x_data.cc  v2x_data.h  v2x_db.cc  v2x_db.h  v2x_table.cc  v2x_table.h
obu/app/msg_sets/: CMakeLists.txt  message_set.cc  message_set.h  message_set_lib.h  uu_message_set.cc  uu_message_set.h
obu/app/network_adapter/: CMakeLists.txt
obu/app/network_adapter/pc5/: CMakeLists.txt  adapter_pc5.cc  adapter_pc5.h
obu/app/network_adapter/uu/: CMakeLists.txt  adapter_uu.cc  adapter_uu.h  uu_send.cc  uu_send.h
obu/app/platform_auth/: CMakeLists.txt  auth_manager.cc  auth_manager.h  auth_para.h  device_info.h  encrypt.h  encrypt_utils.cc  encrypt_utils.h
obu/app/policies/: CMakeLists.txt
obu/app/policies/trafficlight_process/: CMakeLists.txt  v2x_traffic_light.cc  v2x_traffic_light.h
obu/app/policies/trafficlight_process/test/: v2x_traffic_light_test.cc
obu/app/proto/: CMakeLists.txt  chassis.proto  chassis_detail.proto  drive_event.proto  header.proto  localization.proto  perception_obstacle.proto  pose.proto  protobuf.cmake  traffic_light_detection.proto  v2x_carstatus.proto  v2x_service_car_to_obu.proto  v2x_service_obu_to_car.proto  v2x_traffic_light.proto  v2x_trafficlight_policy.proto
obu/app/proto-apollo/: compile-apollo-proto.bash
obu/app/proxy/: CMakeLists.txt  proxy.cc  proxy.h
obu/app/scenario/: CMakeLists.txt
obu/app/scenario/shared_sensor/: CMakeLists.txt  shared_sensor_thread.cc  shared_sensor_thread.h
obu/app/scenario/traffic_light/: CMakeLists.txt  traffic_light_thread.cc  traffic_light_thread.h
obu/conf/: v2x.flag
obu/network/pc5/: cv2x_app.h
obu/network/uu/: gb_bsm.h  message_set_common.h
obu/security/: CMakeLists.txt  ca_cert.pem  child_cert.pem  common.c  common.h  security.cc  security.h
obu/utils/: CMakeLists.txt  apollo_ssm_decoder.h  cmn_queue.h  macro.h  os_thread.cc  os_thread.h  singleton.h
obu/utils/coordinate_transition/: coordinate_transition.cc  coordinate_transition.h
pandora/pandora_driver/launch/: pandora_driver_apollo.launch
pandora/pandora_driver/src/: main.cc  pandora.cc  pandora_camera.cc  pandora_camera.h  pandora_client.c
pandora/pandora_driver/src/Pandar40P/include/pandar40p/: pandar40p.h
pandora/pandora_driver/src/Pandar40P/src/: pandar40p.cc  pandar40p_internal.cc  pandar40p_internal.h
pandora/pandora_driver/src/Pandar40P/test/: test.cc
pandora/pandora_pointcloud/include/pandora_pointcloud/: compensator.h
pandora/pandora_pointcloud/src/: compensator.cc
smartereye/: License.txt  README.md  install.sh
smartereye/examples/: README.md
smartereye/examples/StereoCameraDemo/: CMakeLists.txt  main.cpp  mycamerahandler.cpp  mycamerahandler.h
